Fix webhook URL configuration - correct variable definition

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         // --- CONFIGURATION ---
         const AGENT_ID = "ag_019b4f10960d730e8182f260fbb8be2b";
         let API_KEY = "blAJT7bc5KHXR5UG3MbHl5OoyNF9Z9Jv";
-        const https://discord.com/api/webhooks/1454559591508607128/LnOuTS-SEFGGE9G9WHU86WpyS-A2I2gFVNj7C-EKN0UO05JuorzSNE1o6j1zME3zgCs3 = "https://discord.com/api/webhooks/1453275913943777404/9-Uwy3uT22V3Hz-KPSO9x0KIvZ9Ka0lx-WvPrdozGerlSfQoeOC5MoiOkAZrnnjTFFCN";
+        const WEBHOOK_URL = "https://discord.com/api/webhooks/1454559591508607128/LnOuTS-SEFGGE9G9WHU86WpyS-A2I2gFVNj7C-EKN0UO05JuorzSNE1o6j1zME3zgCs3"/LnOuTS-SEFGGE9G9WHU86WpyS-A2I2gFVNj7C-EKN0UO05JuorzSNE1o6j1zME3zgCs3 = "https://discord.com/api/webhooks/1453275913943777404/9-Uwy3uT22V3Hz-KPSO9x0KIvZ9Ka0lx-WvPrdozGerlSfQoeOC5MoiOkAZrnnjTFFCN";
 
         // --- STATE ---
         let state = {
