Fix WEBHOOK_URL constant with correct Discord webhook endpoint

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         // --- CONFIGURATION ---
         const AGENT_ID = "ag_019b4f10960d730e8182f260fbb8be2b";
         let API_KEY = "blAJT7bc5KHXR5UG3MbHl5OoyNF9Z9Jv";
-        const WEBHOOK_URL = "https://dscord.com/api/webhooks/1454559591508607128/LnOuTS-SEFGGE9G9WHU86WpyS-A2I2gFVNj7C-EKN0UO05JuorzSNE1o6j1zME3zgCs3"/LnOuTS-SEFGGE9G9WHU86WpyS-A2I2gFVNj7C-EKN0UO05JuorzSNE1o6j1zME3zgCs3 = "const WEBHOhttps://discord.com/api/webhooks/1454559591508607128/LnOuTS-SEFGGE9G9WHU86WpyS-A2I2gFVNj7C-EKN0UO05JuorzSNE1o6j1zME3zgCs3OK_URL = "https://discord.com/api/webhooks/1454559591508607128/LnOuTS";
+const WEBHOOK_URL = "https://discord.com/api/webhooks/1454559591508607128/LnOuTS-SEFGGE9G9WHU86WpyS-A2I2gFVNj7C-EKN0UO05JuorzSNE1o6j1zME3zgCs3";
 
         // --- STATE ---
         let state = {
